frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: social-media-app
spec:
  type: LoadBalancer    # or ClusterIP if you use ingress
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
